--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,47 @@
 :root {
-  --primary-color: #6c63ff;
-  --secondary-color: #f5f2fe;
+  --primary-color: #d97059;
+  --secondary-color: #d99b77;
+  --third-color: #f2d4ae;
+  --forth-color: #f2aa52;
+  --fifth-color: #535927;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 body {
   margin-top: 100px;
+  font-family: "Poppins", sans-serif;
+  background-color: #f2d5ae28;
+}
+.navbar-custom {
+  background-color: #f9ecdb;
+}
+.nav-link,
+.navbar-brand {
+  color: var(--primary-color);
 }
 
 h1,
 h2,
 h3 {
   margin: 0;
+  text-align: center;
 }
 
 h1 {
   font-size: 96px;
+  color: var(--primary-color);
 }
 
 h2 {
   font-size: 48px;
   text-align: center;
+  color: var(--fifth-color);
 }
 
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  color: var(--secondary-color);
 }
 
 p {
